# ImMandel

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
libs/MandelbrotEngineAVX2/: CMakeLists.txt
libs/MandelbrotEngineAVX2/include/MandelbrotEngineAVX2/: populate_coordinates_avx2.h
libs/MandelbrotEngineAVX2/src/: escape_time_avx2.asm  populate_coordinates_avx2.cpp
res/shaders/: greyscale_ps.hlsl  greyscale_vs.hlsl
src/: Application.cpp  Application.h  D3D.cpp  D3D.h  Device.cpp  Device.h  Engine.h  EscapeTimeEngine.h  GUI.cpp  GUI.h  ImGuiDrawable.h  ImGui_mpfr.cpp  ImGui_mpfr.h  MappedRegion.h  Shader.h  ShaderParameters.h  Surface.h  Transform.h  TransformGUI.h  Viewport.h  Window.cpp  Window.h  main.cpp
tests/: CMakeLists.txt  TestTransform.cpp
